--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 
     --clr-lg: rgba(255, 255, 255, 0.897);
     --clr-dk: #2f3029;
-    --clr-accnt: #236415;
+    --clr-accnt: #87ec70;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
